...
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:helperText="@string/helper_text"
            app:startIconDrawable="@drawable/ic_text_indicator">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieFirstText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLength="@integer/text_max_length"
                android:nextFocusForward="@id/tilSecondText"
...
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:helperText="@string/helper_text"
            app:startIconDrawable="@drawable/ic_text_indicator">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieSecondText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionPrevious"
                android:inputType="textMultiLine"
                android:maxLength="@integer/text_max_length"
                android:nextFocusForward="@id/tilFirstText"
...
