<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionCompare"
        android:title="@string/menu_item_button_compare"
        android:icon="@drawable/ic_compare"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionClean"
        android:title="@string/menu_item_button_clean"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>